# event-booking-api

./: .codespellrc  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  project.code-workspace  pyproject.toml  pytest.init  requirements.txt
.devcontainer/backend-app/: devcontainer.json  post_create.sh
.github/: CODEOWNERS  CONTRIBUTING.md  auto_assign.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: auto-assign.yml  auto-label.yml  lint.yml  test.yml
backend/: .dockerignore  .flake8  Dockerfile  conftest.py  pyproject.toml  pytest.ini  pytest.init  requirements-dev.txt  requirements.txt
backend/accounts/: constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_email.py
backend/accounts/templates/accounts/: password_reset_email.html
backend/accounts/tests/: factories.py  test_models.py  test_simplejwt.py  test_simplejwt_deactivation.py  test_simplejwt_reset_confirm.py  test_views.py
backend/apps/accounts/: constants.py  models.py  permissions.py  serializers.py  urls.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/tests/: factories.py  test_models.py  test_simplejwt.py  test_simplejwt_deactivation.py  test_simplejwt_reset_confirm.py  test_views.py
backend/apps/bookings/: filters.py  models.py  serializers.py  urls.py
backend/apps/bookings/migrations/: 0001_initial.py  0002_booking_cancelled_at.py
backend/apps/bookings/tests/: factories.py  test_api.py  test_concurrency.py  test_create.py  test_permissions.py  test_validation.py  utils.py
backend/apps/bookings/views/: __init__.py  cancel.py  create.py  list.py  retrieve.py
backend/apps/events/: constants.py  models.py  permissions.py  serializers.py  views.py
backend/apps/events/migrations/: 0001_initial.py  0002_alter_event_description_alter_tickettype_description.py
backend/apps/events/tests/: factories.py  test_events_api.py  test_permissions.py  test_ticket_types_api.py
backend/bookings/: constants.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_status.py  0002_booking_cancelled_at.py
backend/bookings/tests/: factories.py  test_api.py  test_booking_concurrent_attempts.py  test_booking_create.py  test_concurrency.py  test_create.py  test_permissions.py  test_validation.py  test_views.py  utils.py
backend/bookings/views/: __init__.py  cancel.py  create.py  list.py  retrieve.py  update.py
backend/common/: choices.py
backend/common/tests/: test_utils.py
backend/common/tests/factories/: __init__.py  booking_factory.py  booking_item_factory.py  event_factory.py  ticket_type_factory.py  user_factory.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py
backend/events/: constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_tickettype.py  0003_remove_tickettype_quantity_tickettype_quantity_sold_and_more.py  0004_remove_tickettype_updated_at.py  0005_rename_title_event_name.py
backend/events/tests/: event_factory.py  factories.py  test_event_management.py  test_events_api.py  test_models.py  test_permissions.py  test_ticket_types_api.py  test_views.py
config/: settings.py
config/settings/: production.py
docs/: project_guide.md
