# The project configuration
[project]
name = "event-booking-api"
version = "0.1.0"
description = "Event Booking and management API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-filter>=25.1",
    "django-stubs-ext>=5.2.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-nested-routers>=0.94.2",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "codespell>=2.4.1",
    "djlint>=1.36.4",
    "factory-boy>=3.3.3",
    "faker>=37.3.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.7.0",
    "pytest-mock>=3.14.1",
]


# Tool settings
[tool.black]
target-version = ['py313']
include = '\.py$'
exclude = '''
(?x)(
    /(\.venv|venv|build|dist|migrations|__pycache__|\.git)/
    | manage\.py$
    # | config/settings\.py$
)
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["apps", "config"]
skip = ["migrations", "venv", ".venv", ".git"]

[tool.codespell]
skip = ["migrations", "venv", ".venv", ".git"]
