# The project configuration
[project]
name = "event-booking-api"
version = "0.1.0"
description = "Event Booking and management API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-filter>=25.1",
    "django-stubs-ext>=5.2.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-nested-routers>=0.94.2",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "psycopg[c]>=3.3.4",
    "python-decouple>=3.8",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "factory-boy>=3.3.3",
    "faker>=37.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-factoryboy>=2.7.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.15.13",
]


# Tool settings
[tool.ruff]
line-length = 88
extend-exclude = ["manage.py"]


[tool.ruff.lint]
# E/W: pycodestyle (flake8)
# F: pyflakes (flake8)
# I: isort
# B: flake8-bugbear (common logic errors)
# DJ: flake8-django
select = ["E", "W", "F", "I", "B", "DJ"]

# Explicitly ignore these rules project-wide
ignore = [
    "E501", # Let ruff format handle line length
    "W191", # Let ruff format handle indentation
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = ["F401", "F403", "F405", "E501"]
"**/settings/**.py" = ["F403", "F405"]


[tool.ruff.format]
# Match Black's formatting rules
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]


[tool.codespell]
skip = ["migrations", "venv", ".venv", ".git"]


[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

# --nomigrations: Don't run migrations on test DB
# --reuse-db: Reuses test database between runs for speed (great for large suites)
# -s: Allow print statements in tests
# -v: Verbose output
# --ds: Specify Django settings module
addopts = "--ds=config.settings.development --nomigrations --reuse-db -s"
